--- a/calculator.css
+++ b/calculator.css
@@ -19,12 +19,12 @@ div button{
     padding:5px 10px;
 }
 .calc-container button p{
-    
+    font-size:40px;
     margin:0px;
 }
 .output{
     font-family: 'Montserrat';
-    font-size: 35px;
+    font-size: 80px;
     color:rgb(63, 63, 63);
     
 }
@@ -34,6 +34,10 @@ div button{
     
 }
 
+.clear-btn{
+    background: rgb(77, 19, 19);
+}
+
 button:focus {outline-color: rgb(15, 15, 15);}
 
 
@@ -41,13 +45,13 @@ button:focus {outline-color: rgb(15, 15, 15);}
 
 .calc-container{
     display: grid;
-    grid-template-columns: repeat(4, 50px);
-    grid-template-rows: repeat(6, 50px);
-    grid-column-gap: 2px;
-    grid-row-gap: 2px;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(6, 100px);
+    grid-column-gap: 4px;
+    grid-row-gap: 4px;
     margin:auto;
-    width:80px;
-    margin: 200px auto;
+    width:300px;
+    margin: 50px auto;
     grid-template-areas:
     "output output output output"
     ". . . ."
